<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.punpuf.uem_menudocandidato.ui.LoginActivity"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/login_banner_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_banner_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/login_banner"
            android:maxHeight="200dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:contentDescription="@string/login_image_description" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/login_banner_img">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="number"
                android:hint="@string/login_hint_registration_num" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_visibility_state_selector"
            app:layout_constraintTop_toBottomOf="@+id/login_input_registration">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_input_password"/>

        <TextView
            android:id="@+id/login_forgot_pass_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/login_forgot_info"
            android:gravity="center"
            android:linksClickable="true"
            app:layout_constraintTop_toBottomOf="@id/login_login_btn"/>

        <TextView
            android:id="@+id/login_disclaimer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_forgot_pass_tv"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/login_disclaimer"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
